fixed Weather app city

--- a/WebFundamentals/WeatherForecast/WeatherForecast.html
+++ b/WebFundamentals/WeatherForecast/WeatherForecast.html
@@ -14,7 +14,7 @@
           var url=`http://api.openweathermap.org/data/2.5/weather?q=${city}&&units=imperial&&appid=${key}`;
           $.get(url, function(res) {
             var temperature = res.main.temp;
-            $('body').append(`<h1>${city}</h1>`);
+            $('body').append(`<h1>${res.name}</h1>`);
             $('body').append(`Temperature: `+temperature);
           }, 'json');
           // don't forget to return false so the page doesn't refresh
