--- a/WebFundamentals/SortableNinja/SortableNinja.html
+++ b/WebFundamentals/SortableNinja/SortableNinja.html
@@ -10,10 +10,10 @@
 	<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
 	<script>
-  $( function() {
-    $( "#sortable" ).sortable();
-    $( "#sortable" ).disableSelection();
-  } );
+  	$( function() {
+    	$( "#sortable" ).sortable();
+    	// $( "#sortable" ).disableSelection();
+  	});
   </script>
 </head>
 <body>
